@startuml
title US600 Class Diagram - Web Controller Version

skinparam titleBorderRoundCorner 10
skinparam titleBorderThickness 2
skinparam titleBorderColor indianred
skinparam titleBackgroundColor Snow
skinparam FontName quicksand
skinparam titleFontSize 10
skinparam roundcorner 10


skinparam class {
 BorderColor indianred
 BackgroundColor indianred
 BackgroundColor Snow
  roundcorner 10
  ArrowFontName Verdana
  ArrowColor indianred
  ArrowFontColor darkslategrey
  FontSize 12
}

HTTPClient -- HouseMonitoringWebController : >
HouseMonitoringWebController -- GeographicAreaHouseService : >
GeographicAreaHouseService -- AreaSensor : >
GeographicAreaHouseService -- ReadingUtils : >

class HouseMonitoringWebController {
GeographicAreaHouseService;
getCurrentHouseAreaTemperature()
}

class GeographicAreaHouseService{
GeographicAreaRepository;
HouseRepository;
getHouseAreaTemperature()
getClosestAreaSensorOfGivenType(String)
}

class ReadingUtils{
List<AreaSensor> areaSensors;
getSensors()
}

class AreaSensor{
getReadings()
}

class ReadingUtils{
getMostRecentReading(List<Reading>)
}

@enduml